grocery buttons now pink

--- a/css/deals.css
+++ b/css/deals.css
@@ -1,9 +1,9 @@
-#test1 {
-    display: inline-block;
-}
-#test2 {
+.div-sidebyside {
     display: inline-block;
 }
 #quantity {
     width: 50px;
+}
+.container {
+    padding-top: 12vh;
 }
