--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -117,15 +117,16 @@
         </div>
     </div>
 </div>
+
 <div class="container">
-<div class="card">
-  <div class="card-body">
+  <div class="card">
+    <div class="card-body">
       <h1 class="display-4">Deal of the Day!</h1>
       <hr class="my-4">
-      <div id="test1">
+      <div class="div-sidebyside">
         <img src="img/treasure.jpg" height="200" width="200" alt="treasure">
       </div>
-      <div class="pl-4" id="test2">
+      <div class="pl-4 div-sidebyside">
         <h3>Item Name</h3>
         <p>Description</p>
         <input type="text" id="quantity">
@@ -134,8 +135,7 @@
     </div>
   </div>
 </div>
-</div
-{{{popup}}}
+
 <footer class="mt-5 footer">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   <!-- The overlay -->
