--- a/cart.hbs
+++ b/cart.hbs
@@ -192,7 +192,7 @@
     <!-- Button to close the overlay navigation -->
     <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
     <!-- Overlay content -->
-    <div class="overlay-content">
+    <div class="footeroverlay-content">
       <a href="#">About Us</a>
       <a href="#">Services</a>
       <a href="#">Join Us</a>
