--- a/instruments.hbs
+++ b/instruments.hbs
@@ -169,7 +169,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
 
         <!-- Overlay content -->
-        <div class="overlay-content">
+        <div class="footeroverlay-content">
             <a href="#">About Us</a>
             <a href="#">Services</a>
             <a href="#">Join Us</a>
