more css reorg, updated deals a little

--- a/css/deals.css
+++ b/css/deals.css
@@ -7,3 +7,9 @@
 .container {
     padding-top: 12vh;
 }
+body {
+    height: 100vh;
+}
+.main-img {
+    background-image: url("../img/deal.png");
+}
