--- a/cart.hbs
+++ b/cart.hbs
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/cart.css">
   <link rel="icon" href="img/HatLogo.png">
   <title>nozamA - My Cart</title>
