--- a/css/general.css
+++ b/css/general.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Fira Sans', sans-serif;
 }
 
+.text-shadow {
+  text-shadow: 4px 4px 4px #aaa;
+}
+
 .hover-card:hover .button {
   opacity: 1;
 }
@@ -155,6 +159,21 @@ body {
   font-size: 60px;
 }
 
+.main-img {
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 50vh;
+}
+
+.main-title {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40%;
+  color: white;
+  background-image: linear-gradient(to right, rgba(26, 26, 26, 0.5), rgba(255, 255, 255, 0));
+}
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
