--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -118,6 +118,10 @@
     </div>
 </div>
 
+<div class="main-img">
+  <h1 class="main-title mb-0 pt-5">My Shopping Cart</h1>
+</div>
+
 <div class="container">
   <div class="card">
     <div class="card-body">
