--- a/instruments.hbs
+++ b/instruments.hbs
@@ -151,6 +151,7 @@
                 <p class="card-text">{{this.description}}</p>
                 <div class="cart-info">
                     <h3>${{this.price}}</h3>
+                    <h6>Points Cost: {{this.points}}</h6>
                     <a href="/add_cart/{{this.id}}" class="btn btn-pink">Add to Cart</a>
                 </div>
             </div>
