--- a/cart.hbs
+++ b/cart.hbs
@@ -164,32 +164,41 @@
   </div>
 </div>
 {{/each}}
-<div class="row">
-  <div class="col-6 offset-1 mt-4">
-    <table class="table">
-      <tr>
-        <th>Sub Total:</th>
-        <td>${{sub_total}}</td>
-      </tr>
-      <tr>
-        <th>Tax:</th>
-        <td>${{tax}}</td>
-      </tr>
-      <tr>
-        <th>Total:</th>
-        <td id="total">${{total}}</td>
-      </tr>
-    </table>
+<div class="container">
+  <div class="row">
+    <div class="col 4 offset-1 mt-4">
+      <table class="table">
+        <tr>
+          <th>Sub Total:</th>
+          <td>${{sub_total}}</td>
+        </tr>
+        <tr>
+          <th>Tax:</th>
+          <td>${{tax}}</td>
+        </tr>
+        <tr>
+          <th>Total:</th>
+          <td id="total">${{total}}</td>
+        </tr>
+      </table>
+    </div>
   </div>
-  <div class="col-4" style="position: relative;">
-    <a class="btn btn-pink btn-md checkout-button" onClick="checkout()" href="#">Checkout With Money</a>
+  <div class="row">
+    <div class="col-2 offset-3">
+      Current Point Balance: 0
+    </div>
+    <div class="col-2" style="position: relative;">
+      <a class="btn btn-pink btn-md checkout-button" onClick="checkout()" href="#">Checkout With Points</a>
+    </div>
+    <div class="col-2" style="position: relative;">
+      <a class="btn btn-pink btn-md checkout-button" onClick="checkout()" href="#">Checkout With Money</a>
+    </div>
   </div>
 </div>
-
-<footer class="  mt-5 footer">
+<footer class="mt-5 footer">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   <!-- The overlay -->
-  <div id="myFooter" class="footer-overlay">
+  <div id="myFooter" class="footeroverlay">
     <!-- Button to close the overlay navigation -->
     <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
     <!-- Overlay content -->
