--- a/cart.hbs
+++ b/cart.hbs
@@ -180,18 +180,22 @@
           <th>Total:</th>
           <td id="total">${{total}}</td>
         </tr>
+          <tr>
+              <th>Cost in Points:</th>
+              <td id="total_points">{{point_cost}}</td>
+          </tr>
       </table>
     </div>
   </div>
   <div class="row">
     <div class="col-2 offset-3">
-      Current Point Balance: 0
+      <p id="current_points">Current Point Balance: {{currentPoints}}</p>
     </div>
     <div class="col-2" style="position: relative;">
-      <a class="btn btn-pink btn-md checkout-button" onClick="checkout()" href="#">Checkout With Points</a>
+      <a class="btn btn-pink btn-md checkout-button" onClick="checkout_points()" href="#">Checkout With Points</a>
     </div>
     <div class="col-2" style="position: relative;">
-      <a class="btn btn-pink btn-md checkout-button" onClick="checkout()" href="#">Checkout With Money</a>
+      <a class="btn btn-success btn-md checkout-button" onClick="checkout()" href="#">Checkout With Money</a>
     </div>
   </div>
 </div>
@@ -277,10 +281,25 @@
 <script>
     function checkout() {
         const string = "Are you sure you want to place your order for ";
-        if (confirm(string + document.getElementById('total').innerText)) {
+        const test = confirm(string + document.getElementById('total').innerText + '?');
+        if (test == true) {
             document.location.href = '/checkout';
+        } else {
+            document.location.href = '/cart';
         }
     }
 </script>
+<script>
+    function checkout_points() {
+        const string = "Are you sure you want to place your order for ";
+        const test = confirm(string + document.getElementById('total_points').innerText + ' points?');
+        if (test == true) {
+            document.location.href = '/checkout_points';
+        } else {
+            document.location.href = '/cart';
+        }
+    }
+</script>
+{{{script}}}
 </body>
 </html>
