--- a/landing.hbs
+++ b/landing.hbs
@@ -316,7 +316,6 @@
             <div class="button"><a href="http://localhost:8080/electronics#tv1"> View Details </a></div>
         </div>
     </div>
-    {{{popup}}}
 </div>
 <footer class="mt-5 footer">
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
@@ -404,6 +403,8 @@
 </script>
 
 <script src="content/bootstrapJS/jquery-2.1.1.min.js" type="text/javascript"></script>
+{{{popup}}}
 {{{modal}}}
+{{{orderPlaced}}}
 </body>
 </html>
