--- a/css/deals.css
+++ b/css/deals.css
@@ -5,11 +5,14 @@
     width: 50px;
 }
 .container {
-    padding-top: 12vh;
-}
-body {
-    height: 100vh;
+    text-align: center;
 }
 .main-img {
     background-image: url("../img/deal.png");
+}
+.desc {
+    text-align: left;
+}
+#timer {
+    color: red;
 }
