--- a/css/general.css
+++ b/css/general.css
@@ -84,8 +84,8 @@ body {
 #myBtn {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
-  bottom:20px; /* Place the button at the bottom of the page */
-  right: 25px; /* Place the button 30px from the right */
+  bottom:12px; /* Place the button at the bottom of the page */
+  right: 12px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
@@ -94,6 +94,9 @@ body {
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
+  border-style: solid;
+  border-color: gray;
+  border-width: 1px;
   font-size: 18px; /* Increase font size */
 }
 
@@ -104,10 +107,8 @@ body {
   padding: 15px;
   border: none;
   cursor: pointer;
-  left: 25px;
   z-index: 99;
-  position: fixed;
-  bottom: 20px;
+  margin: 12px;
   border-radius:10px;
 }
 
