today's deals complete with timer

--- a/landing.hbs
+++ b/landing.hbs
@@ -157,36 +157,32 @@
                 </div>
             </div>
             <div class="carousel-item img-mother">
-                <img src="/img/mother.jpg" class="img-fluid" alt="...">
-                <div class="jumbotron">
-                    <div class="col-4 offset-4 bg-jumbo">
-                        <h1 class="display-4 title-black text-shadow">Mother's Day Special</h1>
-                        <p class="lead title-black">Up to 50% Off!<br>
-                        </p>
-                        <hr class="my-4">
-                        <p class="title-black">Give your mom a gift she'll love</p>
-                        <p class="lead">
-                            <a class="btn btn-pink btn-md" href="#" role="button">Shop Now</a>
-                        </p>
-                    </div>
+              <div class="jumbotron">
+                <div class="col-4 offset-4 bg-jumbo">
+                  <h1 class="display-4 title-black text-shadow">Mother's Day Special</h1>
+                  <p class="lead title-black">Up to 50% Off!<br>
+                  </p>
+                  <hr class="my-4">
+                  <p class="title-black">Give your mom a gift she'll love<</p>
+                  <p class="lead">
+                    <a class="btn btn-pink btn-md" href="#" role="button">Shop Now</a>
+                  </p>
                 </div>
-
+              </div>
             </div>
             <div class="carousel-item img-reward">
-                <img src="/img/treasure.jpg" class="img-fluid"  alt="...">
-                <div class="jumbotron">
-                    <div class="col-4 offset-4 bg-jumbo">
-                        <h1 class="display-4 title-black text-shadow">Win Free Stuff</h1>
-                        <p class="lead title-black">Get points for every purchase!<br>
-                        </p>
-                        <hr class="my-4">
-                        <p class="title-black">Sign Up for the Rewards Program</p>
-                        <p class="lead">
-                            <a class="btn btn-pink btn-md" href="#" role="button">Learn more</a>
-                        </p>
-                    </div>
+              <div class="jumbotron">
+                <div class="col-4 offset-4 bg-jumbo">
+                  <h1 class="display-4 title-black text-shadow">Earn Rewards</h1>
+                  <p class="lead title-black">Get points for every purchase!<br>
+                  </p>
+                  <hr class="my-4">
+                  <p class="title-black">Sign Up for the Rewards Program</p>
+                  <p class="lead">
+                    <a class="btn btn-pink btn-md" href="#" role="button">Learn more</a>
+                  </p>
                 </div>
-
+              </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
