--- a/css/landing.css
+++ b/css/landing.css
@@ -126,13 +126,13 @@
 
 .jumbotron {
   position: absolute;
-  top:0px;
-  bottom: 0px;
+  top:0;
+  bottom: 0;
   left: 0;
   right: 0;
-  margin: auto;
-  background:none;
-  height: auto;
+  /*margin: auto;*/
+  background: none;
+  /*height: auto;*/
   color: black;
   text-align: center;
 }
