--- a/instruments.hbs
+++ b/instruments.hbs
@@ -148,7 +148,7 @@
             </div>
             <div class="card-body align-items-center text-center">
                 <h5 class="card-title text-center">{{this.title}}</h5>
-                <p class="card-text">{{this.description}}</p>
+                <p class="card-text">{{{this.description}}}</p>
                 <div class="cart-info">
                     <h3>${{this.price}}</h3>
                     <h6>Points Cost: {{this.points}}</h6>
