Todays Deals Page

--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -122,6 +122,7 @@
   <h1 class="main-title mb-0 pt-5">My Shopping Cart</h1>
 </div>
 
+{{# each item}}
 <div class="container mt-5">
   <div class="card">
     <div class="card-body">
@@ -129,19 +130,20 @@
       <hr class="my-4">
       <div class="row justify-content-center">
         <div class="div-sidebyside" style=": 20px;">
-          <img src="img/treasure.jpg" height="200" width="200" alt="treasure">
+            {{{this.dealsImg}}}
         </div>
         <div class="pl-4 desc">
           <div id="timer"></div>
-          <h3>Item Name</h3>
-          <p>Description</p>
-          <input type="text" id="quantity">
-          <button class="btn btn-pink" type="button">Add to Cart</button>
+          <h3>{{this.title}}</h3>
+          <p>{{this.description}}</p>
+            <h3>${{this.price}}</h3>
+          <a class="btn btn-pink" href="/add_cart/{{this.id}}">Add to Cart</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+{{/each}}
 
 <footer class="mt-5 footer">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
