--- a/groceries.hbs
+++ b/groceries.hbs
@@ -139,8 +139,8 @@
     <div class="main-img">
         <h1 class="main-title mb-0 pt-5">Groceries</h1>
     </div>
+<div class="container">
     <div class="row">
-      <div class="col-9">
         <div class="row justify-content-center">
               {{# each products}}
               <div class="product-card" style="width: 16rem; position: relative;" id="{{this.id}}">
@@ -159,37 +159,9 @@
               </div>
               {{/each}}
         </div>
-      </div>
-      <div class="col-3">
-        <div class="sticky-cart mt-2 pl-1">
-          <h3 class="text-center">My Cart</h3>
-          <div class="cart-stuff">
-            <div>
-              <h4><strong>Item Name</strong></h4>
-              <p>$9.99</p>
-            </div>
-            <div>
-              <h4><strong>Item Name</strong></h4>
-              <p>$9.99</p>
-            </div>
-            <div>
-              <h4><strong>Item Name</strong></h4>
-              <p>$9.99</p>
-            </div>
-            <div>
-              <h4><strong>Item Name</strong></h4>
-              <p>$9.99</p>
-            </div>
-            <div>
-              <h4><strong>Item Name</strong></h4>
-              <p>$9.99</p>
-            </div>
-          </div>
-          <a href="#" class="btn btn-pink">Checkout</a>
-        </div>
-      </div>
     </div>
     {{{popup}}}
+</div>
 
 <footer class="mt-5 footer">
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
