todays deal fixed

--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -119,7 +119,7 @@
 </div>
 
 <div class="main-img">
-  <h1 class="main-title mb-0 pt-5">My Shopping Cart</h1>
+  <h1 class="main-title mb-0 pt-5">Todays Deals</h1>
 </div>
 
 {{# each item}}
