--- a/css/general.css
+++ b/css/general.css
@@ -18,9 +18,9 @@ body {
 
 .cart-menu {
   padding: 5px;
-  color: white;
+  color: black;
   border: 1px solid rgba(210, 210, 210, 0.5);
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgb(255, 255, 255);
   margin-bottom: 1rem;
 }
 
