cart updated to every page

--- a/electronics.hbs
+++ b/electronics.hbs
@@ -45,14 +45,14 @@
           <li class="nav-item dropdown" id="cart"><a href="http://localhost:8080/cart" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"><img
               src="img/cart.png" class="cart-icon"> My Cart
           </a><div class="dropdown-menu dropmenu cart-dropmenu">
-            <div class="cart-menu"><h5>Product Name</h5><p>$5.99</p>
+            <div class="cart-menu"><h5>Product Name</h5><p class="mb-0">$5.99</p>
               <div class="row">
-                <div class="col-8">
-                  <p>quantity:</p>
+                <div class="col-7">
+                  <p class="mb-0">quantity:</p>
                 </div>
-                <div class="col-4">
-                              <span><a><img src="img/minus.png" class="cart-button"></a> 1 <a><img src="img/plus.png"
-                                                                                                   class="cart-button"></a></span>
+                <div class="col-5">
+                  <span><a><img src="img/minus.png" class="cart-button"></a> 1 <a><img src="img/plus.png"
+                                                                                       class="cart-button"></a></span>
                 </div>
               </div>
             </div>
