--- a/electronics.hbs
+++ b/electronics.hbs
@@ -161,23 +161,7 @@
     {{{popup}}}
 </div>
 
-<footer class="mt-5 footer">
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    <!-- The overlay -->
-    <div id="myFooter" class="footeroverlay">
-        <!-- Button to close the overlay navigation -->
-        <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
-        <!-- Overlay content -->
-        <div class="footeroverlay-content">
-            <a href="#">About Us</a>
-            <a href="#">Services</a>
-            <a href="#">Join Us</a>
-            <a href="#">Contact Us</a>
-        </div>
-    </div>
-    <!-- Use any element to open/show the overlay navigation menu -->
-    <button onclick="openFooter()" id="open">Info</button>
-</footer>
+{{> footer}}
 <!--Scripts-->
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
