--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -98,13 +98,23 @@
                     <div class="form-group">
                         <label for="registerpassword">Password</label>
                         <div class="input-group">
-                            <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required>
+                            <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required
+                                   onKeyUp="CheckIntensity(this.value)">
                             <div class="input-group-append">
                                 <span class="input-group-text">
                                   <i class="fa fa-eye-slash" id="eye" role="button" onclick="reveal()"></i>
                                 </span>
                             </div>
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <table border="0" cellpadding="0" cellspacing="0" style="transform:translateY(8px);">
+                            <tr align="center">
+                                <td id="pwd_Weak" class="pwd pwd_c"> </td>
+                                <td id="pwd_Medium" class="pwd pwd_c pwd_f">NULL</td>
+                                <td id="pwd_Strong" class="pwd pwd_c pwd_c_r"> </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -137,7 +147,7 @@
           <h3>{{this.title}}</h3>
           <p>{{this.description}}</p>
             <h3>${{this.price}}</h3>
-          <a class="btn btn-pink" href="/add_cart/{{this.id}}">Add to Cart</a>
+          <a class="btn btn-pink" href="/add_deal/{{this.id}}">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -145,48 +155,68 @@
 </div>
 {{/each}}
 
-<footer class="mt-5 footer">
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-  <!-- The overlay -->
-  <div id="myFooter" class="footeroverlay">
-
-    <!-- Button to close the overlay navigation -->
-    <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
-
-    <!-- Overlay content -->
-    <div class="footeroverlay-content">
-      <a href="#">About Us</a>
-      <a href="#">Services</a>
-      <a href="#">Join Us</a>
-      <a href="#">Contact Us</a>
-    </div>
-
-  </div>
-
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <button onclick="openFooter()" id="open">Info</button>
-
-</footer>
+{{> footer}}
 <!--Scripts-->
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
 
-<script type="text/javascript" src="landing.js"></script>
+<script type="text/javascript" src="/landing.js"></script>
 
 <script src="https://unpkg.com/simplebar@latest/dist/simplebar.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script type="text/javascript">
-    function form_submit() {
-        document.getElementById("register").submit();
+<script>
+    function CheckIntensity(pwd) {
+        var Mcolor, Wcolor, Scolor, Color_Html;
+        var m = 0;
+        if (pwd.length == 0) {
+            m = 0;
+        } else if (pwd.length <= 3) {
+            m = 1;
+        } else if (pwd.length <= 6) {
+            m = 2;
+        } else {
+            m = 3;
+        }
+
+        switch (m) {
+            case 1:
+                Wcolor = "pwd pwd_Weak_c";
+                Mcolor = "pwd pwd_c";
+                Scolor = "pwd pwd_c pwd_c_r";
+                Color_Html = "Weak";
+                break;
+            case 2:
+                Wcolor = "pwd pwd_Medium_c";
+                Mcolor = "pwd pwd_Medium_c";
+                Scolor = "pwd pwd_c pwd_c_r";
+                Color_Html = "Medium";
+                break;
+            case 3:
+                Wcolor = "pwd pwd_Strong_c";
+                Mcolor = "pwd pwd_Strong_c";
+                Scolor = "pwd pwd_Strong_c pwd_Strong_c_r";
+                Color_Html = "Strong";
+                break;
+            default:
+                Wcolor = "pwd pwd_c";
+                Mcolor = "pwd pwd_c pwd_f";
+                Scolor = "pwd pwd_c pwd_c_r";
+                Color_Html = "NULL";
+                break;
+        }
+        document.getElementById('pwd_Weak').className = Wcolor;
+        document.getElementById('pwd_Medium').className = Mcolor;
+        document.getElementById('pwd_Strong').className = Scolor;
+        document.getElementById('pwd_Medium').innerHTML = Color_Html;
     }
 </script>
-<script type="text/javascript">
-    function form_submit1() {
-        document.getElementById("login_form").submit();
-    }
+<script>
+    $("#captchapng").click(function(){
+        $("#captchapng").attr('src',`/vcode?randomId=${Math.random()}`)
+    });
 </script>
 <script>
     $(document).ready(function () {
