--- a/landing.hbs
+++ b/landing.hbs
@@ -204,7 +204,7 @@
                  src="/img/products/groceries/chips.png" alt="" />
             <p class="title">Lays Chips</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/groceries#coke1"> View Details </a></div>
+            <div class="button"><a href="http://localhost:8080/groceries#chips1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
