--- a/groceries.hbs
+++ b/groceries.hbs
@@ -19,38 +19,7 @@
 
 <body>
 {{> fakeNavBar }}
-<!--Real Nav Bar-->
-<nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-    <a class="navbar-brand" href="http://localhost:8080/">
-        <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse mt-3" id="navbar">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
-                <div class="dropdown-menu dropmenu">
-                    <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
-                    <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
-                    <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            {{> cartIcon}}
-            {{{ loginlogoutButton }}}
-            <li class="nav-item" id="registerbutton">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
+{{> realNavBar }}
 <div class="modal fade" id="login">
     <div class="modal-dialog">
         <div class="modal-content">
