--- a/cart.hbs
+++ b/cart.hbs
@@ -20,6 +20,7 @@
 {{> fakeNavBar }}
 {{> realNavBar }}
 
+<!------------------------------- Modals ----------------------------------->
 <div class="modal fade" id="login">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -105,6 +106,53 @@
   </div>
 </div>
 
+<div class="popup1">
+  <div class="popup-box">
+    <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order for $0?</p>
+    <div class="row justify-content-center">
+      <button class="btn btn-pink mb-3" style="width: 80px;">Yes</button>
+      <button class="btn btn-link mb-3">Cancel</button>
+    </div>
+  </div>
+</div>
+
+<div class="popup2">
+  <div class="popup-box">
+    <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order for 0 points?</p>
+    <div class="row justify-content-center">
+      <button class="btn btn-pink" style="width: 80px;">Yes</button>
+      <button class="btn btn-link">Cancel</button>
+    </div>
+  </div>
+</div>
+
+<div class="popup3">
+  <div class="popup-box">
+    <p class="text-center popup-msg mx-auto mt-3">You need to add something to your cart first silly!</p>
+    <div class="row justify-content-center">
+      <button class="btn btn-pink" style="width: 80px;">Okay!</button>
+    </div>
+  </div>
+</div>
+
+<div class="popup4">
+  <div class="popup-box">
+    <p class="text-center popup-msg mx-auto mt-3">You do not have enough points to make this purchase yet, try earning some more!</p>
+    <div class="row justify-content-center">
+      <button class="btn btn-pink" style="width: 80px;">Okay!</button>
+    </div>
+  </div>
+</div>
+
+<div class="popup5">
+  <div class="popup-box">
+    <div class="row justify-content-center">
+      <img src="img/checkmark.png" height="150px" width="150px" class="mt-3">
+    </div>
+    <p class="text-center popup-msg mx-auto mt-3">Your order has been placed, thank you!</p>
+  </div>
+</div>
+
 <div class="main-img">
   <h1 class="main-title mb-0 pt-5">My Shopping Cart</h1>
 </div>
@@ -136,38 +184,49 @@
 {{/each}}
 <div class="container">
   <div class="row">
-    <div class="col-4 offset-1 mt-4">
-      <table class="table">
+    <div class="col-4 offset-4 mt-4">
+      <table class="table table-bordered">
         <tr>
-          <th>Sub Total:</th>
-          <td>${{sub_total}}</td>
+          <th class="table-dark">Sub Total:</th>
+          <td class="table-light">${{sub_total}}</td>
         </tr>
         <tr>
-          <th>Tax:</th>
-          <td>${{tax}}</td>
+          <th class="table-dark">Tax:</th>
+          <td class="table-light">${{tax}}</td>
         </tr>
         <tr>
-          <th>Total:</th>
-          <td id="total">${{total}}</td>
+          <th class="table-dark">Total:</th>
+          <td class="table-light" id="total">${{total}}</td>
         </tr>
         <tr>
-          <th>Cost in Points:</th>
-          <td id="total_points">{{point_cost}}</td>
+          <th class="table-dark">Cost in Points:</th>
+          <td class="table-light" id="total_points">{{point_cost}}</td>
         </tr>
       </table>
     </div>
-    <div class="col-4 offset-1 align-items-center">
-      <div style="display: inline-block;">
-        <a class="btn btn-pink btn-md checkout-button" onClick="checkout_points()" href="#">Checkout With Points</a>
-      </div>
-      <div style="display: inline-block;">
-        <a class="btn btn-success btn-md checkout-button" onClick="checkout()" href="#">Checkout With Money</a>
+  </div>
+  <div class="row">
+    <div class="col-6 offset-3">
+      <div class="row bg-dark current_points">
+        <div class="col-7">
+          <p class="my-auto py-2">Current Point Balance:</p>
+        </div>
+        <div class="col-5 my-auto">
+          <p id="current_points" class="text-right mb-0">{{currentPoints}}</p>
+        </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-2 offset-3">
-      <p id="current_points">Current Point Balance: {{currentPoints}}</p>
+    <div class="col-3 offset-3 align-items-center" style="position: relative; height: 10vh;">
+      <div class="payment-left">
+        <a class="btn btn-dark btn-md checkout-button" onClick="checkout_points()" href="#">Checkout With Points</a>
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="payment-right">
+        <a class="btn btn-pink btn-md checkout-button" onClick="checkout(); confirmPurchase()" href="#">Checkout With Money</a>
+      </div>
     </div>
   </div>
 </div>
