--- a/css/cart.css
+++ b/css/cart.css
@@ -14,7 +14,6 @@
 
 .cart-img {
   left: 0;
-  width: 100px;
   height: 11vh;
   padding: 5px 0;
   float: left;
@@ -26,4 +25,117 @@
 
 .update-button {
   font-size: 12px;
+}
+
+.payment-left {
+  position: absolute;
+  right: 10px;
+  bottom: 0;
+}
+
+.payment-right {
+  position: absolute;
+  left: 10px;
+  bottom: 0;
+}
+
+.current_points {
+  color: white;
+  border-radius: 10px;
+}
+
+.popup1 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup2 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup3 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup4 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup5 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup-box {
+  width: 35%;
+  height: 35vh;
+  padding: 10px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 10px;
+  min-width: 400px;
+  min-height: 150px;
+  font-size: 1.2rem;
+}
+
+.popup-msg {
+  width: 70%;
+  height: 50%;
 }
