--- a/cart.hbs
+++ b/cart.hbs
@@ -107,7 +107,7 @@
 </div>
 
 <div class="popup1">
-  <div class="popup-box">
+  <div class="popup-box-short">
     <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order for $0?</p>
     <div class="row justify-content-center">
       <button class="btn btn-pink mb-3" style="width: 80px;">Yes</button>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="popup2">
-  <div class="popup-box">
+  <div class="popup-box-short">
     <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order for 0 points?</p>
     <div class="row justify-content-center">
       <button class="btn btn-pink" style="width: 80px;">Yes</button>
@@ -127,7 +127,7 @@
 </div>
 
 <div class="popup3">
-  <div class="popup-box">
+  <div class="popup-box-short">
     <p class="text-center popup-msg mx-auto mt-3">You need to add something to your cart first silly!</p>
     <div class="row justify-content-center">
       <button class="btn btn-pink" style="width: 80px;">Okay!</button>
@@ -136,7 +136,7 @@
 </div>
 
 <div class="popup4">
-  <div class="popup-box">
+  <div class="popup-box-short">
     <p class="text-center popup-msg mx-auto mt-3">You do not have enough points to make this purchase yet, try earning some more!</p>
     <div class="row justify-content-center">
       <button class="btn btn-pink" style="width: 80px;">Okay!</button>
@@ -146,8 +146,8 @@
 
 <div class="popup5">
   <div class="popup-box">
-    <div class="row justify-content-center">
-      <img src="img/checkmark.png" height="150px" width="150px" class="mt-3">
+    <div class="row justify-content-center img-confirm-container">
+      <img src="img/checkmark.png" class="mt-2 img-confirm">
     </div>
     <p class="text-center popup-msg mx-auto mt-3">Your order has been placed, thank you!</p>
   </div>
