--- a/css/cart.css
+++ b/css/cart.css
@@ -55,8 +55,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  visibility: visible;
-  opacity: 1;
+  visibility: hidden;
+  opacity: 0;
   transition: visibility 0s, opacity 0.5s;
 }
 
