--- a/css/general.css
+++ b/css/general.css
@@ -204,6 +204,10 @@ body {
   background-image: linear-gradient(to right, rgba(26, 26, 26, 0.5), rgba(255, 255, 255, 0));
 }
 
+#eye {
+  cursor: pointer;
+}
+
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
   .footeroverlay a {font-size: 20px}
