--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -116,7 +116,7 @@
           <div id="timer"></div>
           <h3>{{this.title}}</h3>
           <p>{{this.description}}</p>
-            <h3>${{this.price}}</h3>
+            <h3>${{this.price}}<span style="color: red;"> 25% Off!</span></h3>
           <a class="btn btn-pink" href="/add_deal/{{this.id}}">Add to Cart</a>
         </div>
       </div>
