New notifications for checking out

--- a/landing.hbs
+++ b/landing.hbs
@@ -104,6 +104,15 @@
     </div>
 </div>
 
+<div class="popup5">
+    <div class="popup-box">
+        <div class="row justify-content-center img-confirm-container">
+            <img src="/img/checkmark.png" class="mt-2 img-confirm">
+        </div>
+        <p class="text-center popup-msg mx-auto mt-3">Your order has been placed, thank you!</p>
+    </div>
+</div>
+
 <div class="bd-example">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
