--- a/cart.hbs
+++ b/cart.hbs
@@ -108,20 +108,20 @@
 
 <div class="popup1">
   <div class="popup-box-short">
-    <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order for $0?</p>
+    <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order?</p>
     <div class="row justify-content-center">
-      <button class="btn btn-pink mb-3" style="width: 80px;">Yes</button>
-      <button class="btn btn-link mb-3">Cancel</button>
+      <a href="/checkout" class="btn btn-pink mb-3" style="width: 80px;">Yes</a>
+      <a href="/cart" class="btn btn-link mb-3">Cancel</a>
     </div>
   </div>
 </div>
 
 <div class="popup2">
   <div class="popup-box-short">
-    <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order for 0 points?</p>
+    <p class="text-center popup-msg mx-auto mt-3">Are you sure you want to place your order?</p>
     <div class="row justify-content-center">
-      <button class="btn btn-pink" style="width: 80px;">Yes</button>
-      <button class="btn btn-link">Cancel</button>
+      <a href="/checkout_points" class="btn btn-pink" style="width: 80px;">Yes</a>
+      <a href="/cart" class="btn btn-link">Cancel</a>
     </div>
   </div>
 </div>
@@ -130,7 +130,7 @@
   <div class="popup-box-short">
     <p class="text-center popup-msg mx-auto mt-3">You need to add something to your cart first silly!</p>
     <div class="row justify-content-center">
-      <button class="btn btn-pink" style="width: 80px;">Okay!</button>
+      <a href="/cart" class="btn btn-pink" style="width: 80px;">Okay!</a>
     </div>
   </div>
 </div>
@@ -141,15 +141,6 @@
     <div class="row justify-content-center">
       <button class="btn btn-pink" style="width: 80px;">Okay!</button>
     </div>
-  </div>
-</div>
-
-<div class="popup5">
-  <div class="popup-box">
-    <div class="row justify-content-center img-confirm-container">
-      <img src="img/checkmark.png" class="mt-2 img-confirm">
-    </div>
-    <p class="text-center popup-msg mx-auto mt-3">Your order has been placed, thank you!</p>
   </div>
 </div>
 
@@ -295,24 +286,16 @@
 </script>
 <script>
     function checkout() {
-        const string = "Are you sure you want to place your order for ";
-        const test = confirm(string + document.getElementById('total').innerText + '?');
-        if (test == true) {
-            document.location.href = '/checkout';
-        } else {
-            document.location.href = '/cart';
-        }
+        var mymodal = document.querySelector('.popup1');
+        mymodal.style.visibility = 'visible';
+        mymodal.style.opacity = '1';
     }
 </script>
 <script>
     function checkout_points() {
-        const string = "Are you sure you want to place your order for ";
-        const test = confirm(string + document.getElementById('total_points').innerText + ' points?');
-        if (test == true) {
-            document.location.href = '/checkout_points';
-        } else {
-            document.location.href = '/cart';
-        }
+        var mymodal = document.querySelector('.popup2');
+        mymodal.style.visibility = 'visible';
+        mymodal.style.opacity = '1';
     }
 </script>
 {{{script}}}
