cart dropdown fixed, partials created

--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/categories.css">
   <link rel="stylesheet" href="css/deals.css">
   <link rel="icon" href="img/HatLogo.png">
   <title>Deal of the Day</title>
