--- a/partials/fakeNavBar.hbs
+++ b/partials/fakeNavBar.hbs
@@ -8,16 +8,16 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:8080/electronics">Electronics</a>
+        <a class="nav-link" href="#">Electronics</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:8080/groceries">Groceries</a>
+        <a class="nav-link" href="#">Groceries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:8080/instruments">Musical Instruments</a>
+        <a class="nav-link" href="#">Musical Instruments</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
+        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deal</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
