navbar active done

--- a/instruments.hbs
+++ b/instruments.hbs
@@ -115,5 +115,11 @@
         $("#drop_cart").click();
     });
 </script>
+<script>
+    $(document).ready(function () {
+        var d = document.getElementById("musiNav");
+        d.classList.add("nav-active");
+    })
+</script>
 </body>
 </html>
