--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -111,5 +111,11 @@
         $("#drop_cart").click();
     });
 </script>
+<script>
+    $(document).ready(function () {
+        var d = document.getElementById("todaNav");
+        d.classList.add("nav-active");
+    })
+</script>
 </body>
 </html>
