--- a/groceries.hbs
+++ b/groceries.hbs
@@ -117,5 +117,11 @@
         $("#drop_cart").click();
     });
 </script>
+<script>
+    $(document).ready(function () {
+        var d = document.getElementById("grocNav");
+        d.classList.add("nav-active");
+    })
+</script>
 </body>
 </html>
