--- a/partials/realNavBar.hbs
+++ b/partials/realNavBar.hbs
@@ -7,16 +7,16 @@
   </button>
   <div class="collapse navbar-collapse mt-3" id="navbar">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li id="elecNav">
         <a class="nav-link" href="http://localhost:8080/electronics">Electronics</a>
       </li>
-      <li class="nav-item">
+      <li id="grocNav">
         <a class="nav-link" href="http://localhost:8080/groceries">Groceries</a>
       </li>
-      <li class="nav-item">
+      <li id="musiNav">
         <a class="nav-link" href="http://localhost:8080/instruments">Musical Instruments</a>
       </li>
-      <li class="nav-item">
+      <li id="todaNav">
         <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deal</a>
       </li>
     </ul>
