--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -10,9 +10,9 @@
         <!-- Overlay content -->
         <div class="footeroverlay-content">
             <a href="http://localhost:8080/aboutus">About Us</a>
-            <a href="#">Services</a>
-            <a href="#">Join Us</a>
-            <a href="#">Contact Us</a>
+            <a class="disable-nav" href="#">Services</a>
+            <a class="disable-nav" href="#">Join Us</a>
+            <a class="disable-nav" href="#">Contact Us</a>
         </div>
 
     </div>
