preparing for heroku (changing href links)

--- a/partials/cartIcon.hbs
+++ b/partials/cartIcon.hbs
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown" id="test">
-  <a href="http://localhost:8080/cart" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="drop_cart">
+  <a href="/cart" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="drop_cart">
     <img src="/img/cart.png" class="cart-icon"> My Cart
   </a>
   <div class="dropdown-menu dropmenu cart-dropmenu" id="cart">
