--- a/partials/fakeNavBar.hbs
+++ b/partials/fakeNavBar.hbs
@@ -17,7 +17,7 @@
         <a class="nav-link" href="#">Musical Instruments</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deal</a>
+        <a class="nav-link" href="/todays_deals">Today's Deal</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
