--- a/partials/realNavBar.hbs
+++ b/partials/realNavBar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-  <a class="navbar-brand" href="http://localhost:8080/">
+  <a class="navbar-brand" href="/">
     <img src="/img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
@@ -8,16 +8,16 @@
   <div class="collapse navbar-collapse mt-3" id="navbar">
     <ul class="navbar-nav">
       <li id="elecNav">
-        <a class="nav-link" href="http://localhost:8080/electronics">Electronics</a>
+        <a class="nav-link" href="/electronics">Electronics</a>
       </li>
       <li id="grocNav">
-        <a class="nav-link" href="http://localhost:8080/groceries">Groceries</a>
+        <a class="nav-link" href="/groceries">Groceries</a>
       </li>
       <li id="musiNav">
-        <a class="nav-link" href="http://localhost:8080/instruments">Musical Instruments</a>
+        <a class="nav-link" href="/instruments">Musical Instruments</a>
       </li>
       <li id="todaNav">
-        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deal</a>
+        <a class="nav-link" href="/todays_deals">Today's Deal</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
