--- a/landing.hbs
+++ b/landing.hbs
@@ -84,35 +84,35 @@
                  src="/img/products/groceries/chips.png" alt="" />
             <p class="title">Lays Chips</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/groceries#chips1"> View Details </a></div>
+            <div class="button"><a href="/groceries#chips1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/groceries/coke.png" alt="" />
             <p class="title">Coca Cola</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/groceries#coke1"> View Details </a></div>
+            <div class="button"><a href="/groceries#coke1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/groceries/eggs.png" alt="" />
             <p class="title">White Eggs</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/groceries#eggs1"> View Details </a></div>
+            <div class="button"><a href="/groceries#eggs1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/groceries/butter.png" alt="" />
             <p class="title">Butter</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/groceries#butter1"> View Details </a></div>
+            <div class="button"><a href="/groceries#butter1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/groceries/steak.png" alt="" />
             <p class="title">Kobe Steak</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/groceries#steak1"> View Details </a></div>
+            <div class="button"><a href="/groceries#steak1"> View Details </a></div>
         </div>
     </div>
 
@@ -123,35 +123,35 @@
                  src="/img/products/instruments/guitar.png" alt="" />
             <p class="title">Electric Guitar</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/instruments#guitar1"> View Details </a></div>
+            <div class="button"><a href="/instruments#guitar1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/instruments/clarinet.png" alt="" />
             <p class="title">Clarinet</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/instruments#clarinet1"> View Details </a></div>
+            <div class="button"><a href="/instruments#clarinet1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/instruments/saxophone.png" alt="" />
             <p class="title">Alto Saxophone</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/instruments#saxophone1"> View Details </a></div>
+            <div class="button"><a href="/instruments#saxophone1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/instruments/triangle.png" alt="" />
             <p class="title">Triangle</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/instruments#triangle1"> View Details </a></div>
+            <div class="button"><a href="/instruments#triangle1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img-wide pt-5"
                  src="/img/products/instruments/piano.png" alt="" />
             <p class="title">Piano</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/instruments#piano1"> View Details </a></div>
+            <div class="button"><a href="/instruments#piano1"> View Details </a></div>
         </div>
     </div>
     <h2>Electronics</h2>
@@ -161,35 +161,35 @@
                  src="/img/products/electronics/laptop.png" alt="" />
             <p class="title">Razer Laptop</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/electronics#laptop1"> View Details </a></div>
+            <div class="button"><a href="/electronics#laptop1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/electronics/headphones.png" alt="" />
             <p class="title">Headphones</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/electronics#headphones1"> View Details </a></div>
+            <div class="button"><a href="/electronics#headphones1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
                  src="/img/products/electronics/ipod.png" alt="" />
             <p class="title">iPod Mini</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/electronics#ipod1"> View Details </a></div>
+            <div class="button"><a href="/electronics#ipod1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img-wide pt-5 img-fluid"
                  src="/img/products/electronics/mouse.png" alt="" />
             <p class="title">Gaming Mouse</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/electronics#mouse1"> View Details </a></div>
+            <div class="button"><a href="/electronics#mouse1"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img img-fluid img-fluid"
                  src="/img/products/electronics/tv.webp" alt="" />
             <p class="title">4K HD Television</p>
             <div class="overlay"></div>
-            <div class="button"><a href="http://localhost:8080/electronics#tv1"> View Details </a></div>
+            <div class="button"><a href="/electronics#tv1"> View Details </a></div>
         </div>
     </div>
 </div>
