--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -9,7 +9,7 @@
 
         <!-- Overlay content -->
         <div class="footeroverlay-content">
-            <a href="http://localhost:8080/aboutus">About Us</a>
+            <a href="/aboutus">About Us</a>
             <a class="disable-nav" href="#">Services</a>
             <a class="disable-nav" href="#">Join Us</a>
             <a class="disable-nav" href="#">Contact Us</a>
