--- a/aboutus.hbs
+++ b/aboutus.hbs
@@ -36,16 +36,13 @@
     <h2 class="y">Six Hats Members</h2>
 
     <div class="z">
-        <img src="/img/boat.jpg">
-        <img src="/img/boat.jpg">
-        <img src="/img/boat.jpg"><br>
+        <img src="/img/eugene.png">
+        <img src="/img/kevin.png">
+        <img src="/img/suhani.png"><br>
         <br>
-        <img src="/img/boat.jpg">
-        <img src="/img/boat.jpg">
-        <img src="/img/boat.jpg">
-
-
-
+        <img src="/img/taylor.jpg">
+        <img src="/img/vincent.jpg">
+        <img src="/img/raj.jpg">
     </div>
 </div>
 
