--- a/aboutus.hbs
+++ b/aboutus.hbs
@@ -36,13 +36,13 @@
     <h2 class="y">Six Hats Members</h2>
 
     <div class="z">
-        <img src="/img/eugene.png">
-        <img src="/img/kevin.png">
-        <img src="/img/suhani.png"><br>
+        <img src="/img/eugene.png" height="300" width="300">
+        <img src="/img/kevin.png" height="300" width="300">
+        <img src="/img/suhani.png" height="300" width="300"><br>
         <br>
-        <img src="/img/taylor.jpg">
-        <img src="/img/vincent.jpg">
-        <img src="/img/raj.jpg">
+        <img src="/img/taylor.jpg" height="300" width="300">
+        <img src="/img/vincent.jpg" height="300" width="300">
+        <img src="/img/raj.jpg" height="300" width="300">
     </div>
 </div>
 
